@@ -1,3 +1,7 @@
+* Add delivery time on product
+* Use compute delivery date for stock moves
+* Group stock moves on shipment using a key
+
 Version 2.0.0 - 2011-04-27
 * Bug fixes (see mercurial logs for details)
 
